--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
