--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/main.js",
   "scripts": {
-    "start": "tsc && node dist/main.js"
+    "start": "tsc && tsc-alias && node dist/main.js"
   },
   "author": "",
   "license": "ISC",
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/node": "^24.3.0",
     "node": "^24.6.0",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.9.2"
   },
   "dependencies": {
